--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style>
 h1 {text-align: center;}
 h2 {text-align: center;}
+h3 {text-align: center;}
 p {text-align: center;}
 </style>
 <h1 style="font-family:arial">SWANS</h1>
