--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@ ABSTRACT: Single-cell/nucleus RNA-sequencing (scnRNAseq) is used to examine tran
 <h3 style="font-family:arial">Pipeline will be available soon, check back for updates.
 </h3>
 
+<p style="font-family:arial"></p>
+Contact <a href="https://github.com/beigelk">Kat Beigel</a> (beigelk@chop.edu) for more information. 
+</p>
+
+
 </body>
 </html>
